BCEscapeAnalyzer::ArgumentMap::set_intersect() is incorrect

XMLWordPrintable

    • b03

      The method has the same implementation as set_union():

        void set_union(const ArgumentMap &am) { _bits |= am._bits; }
        void set_intersect(const ArgumentMap &am) { _bits |= am._bits; }

      Obviously, set_intersect() is wrong, should be:

        void set_intersect(const ArgumentMap &am) { _bits &= am._bits; }

      It did not blow up anything, because it has no user.

            Assignee:
            Zhengyu Gu
            Reporter:
            Zhengyu Gu
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: