8216200: BCEscapeAnalyzer::ArgumentMap::set_intersect() is incorrect

Removed incorrect/unused method

Reviewed-by: thartmann